# support-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  embedder.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
api/: main.py  schemas.py
api/middleware/: auth.py  rate_limit.py
api/routes/: chat.py  health.py  ingest.py
cache/: embedding_cache.py  semantic_cache.py
config/: settings.py
config/prompts/: answer.txt  system.txt
data/: CHANGELOG.md  openapi.json
data/sample_docs/account/: cancel-subscription.md  sso-setup.md
data/sample_docs/api/: authentication.md
data/sample_docs/getting-started/: pricing.md  quickstart.md
data/sample_docs/projects/: automations.md  custom-fields.md
data/sample_tickets/: tickets.jsonl
evaluation/: answer_eval.py  retrieval_eval.py
evaluation/datasets/: golden_qa.jsonl
generation/: citation.py  generator.py  llm_router.py  prompt_builder.py
ingestion/: chunkers.py  cleaners.py  embedder.py  pipeline.py  registry.py
ingestion/connectors/: base.py  changelog.py  help_center_html.py  markdown_docs.py  openapi.py  tickets.py
ingestion/workers/: poller.py  webhook_handler.py
observability/: langfuse_client.py  logger.py
retrieval/: bm25_store.py  hybrid.py  query_transform.py  reranker.py  retriever.py  vector_store.py
scripts/: bootstrap_index.py  seed_demo_data.py
tests/integration/: test_api.py
tests/unit/: test_chunkers.py  test_generation.py  test_retrieval.py
