[project]
name = "support-rag"
version = "0.1.0"
description = "Production-grade RAG customer support chatbot"
requires-python = ">=3.11"

dependencies = [
    # Core
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "tenacity>=8.2",
    "httpx>=0.27",

    # Ingestion / parsing
    "llama-index-core>=0.10",
    "llama-index-readers-file>=0.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "markdown-it-py>=3.0",
    "pypdf>=4.0",

    # Embeddings & rerank (local, free)
    "sentence-transformers>=2.7",
    "torch>=2.2",

    # Vector + keyword search
    "qdrant-client>=1.9",
    "rank-bm25>=0.2.2",

    # LLM clients (free tiers)
    "groq>=0.5",
    "google-generativeai>=0.5",

    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",

    # Cache
    "redis>=5.0",

    # Observability
    "langfuse>=2.20",

    # Storage
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",

    # Eval
    "ragas>=0.1.7",
    "datasets>=2.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
include = [
    "api*",
    "cache*",
    "config*",
    "generation*",
    "ingestion*",
    "observability*",
    "retrieval*",
    "evaluation*",
    "scripts*",
]
exclude = ["tests*", "data*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"